# Daytona

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
WindowSystem/Private/: Window.cpp
WindowSystem/Public/: Log.h  Window.h
cmake/: FindSDL2.cmake  utils.cmake
project/: CMakeLists.txt  EntryPoint.cpp
project/graphics/: CMakeLists.txt
project/graphics/src/Private/: Test.cpp
project/graphics/src/Public/: Test.h
src/: CMakeLists.txt  EntryPoint.cpp
src/GraphicsEngine/: CMakeLists.txt
src/WindowSystem/: CMakeLists.txt
src/WindowSystem/Private/: Window.cpp
src/WindowSystem/Public/: Log.h  Window.h
src/graphics/: CMakeLists.txt
src/graphics/src/Private/: ErrorHandler.cpp  Shader.cpp  Test.cpp
src/graphics/src/Public/: ErrorHandler.h  Renderer.h  Shader.h
src/log/: CMakeLists.txt  Log.cpp  Log.h
src/windows/: CMakeLists.txt
src/windows/src/Private/: ErrorHandler.cpp  Window.cpp
src/windows/src/Public/: ErrorHandler.h  Window.h
test/: CMakeLists.txt  sanity_check.cpp
testsuite/: CMakeLists.txt  SanityCheck.cpp
